# tvserver

./: .dockerignore  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.sample  sqlx-data.json
.github/workflows/: rust.yml
client/: 404.html  HomePage.html  VideoControlPage.html  index.html
client.bak/: index.html  script.js
client.bak/_next/static/06LKoV2o45mbRFNXqeLEf/: _buildManifest.js
client.bak/_next/static/css/: c7f2acab1ea316fb.css
client/_next/static/5afBm-NFtX8_6rsnq7cVP/: _buildManifest.js
client/_next/static/7X3dVQ2FoeiSOXbwVk2Np/: _buildManifest.js
client/_next/static/E6jw7qd4M0mq_0YaaAcYk/: _buildManifest.js
client/_next/static/TLUQS8oeQxYL8D7KpG0zH/: _buildManifest.js
client/_next/static/chunks/: 935-23f5e1dec9ece7ab.js  d64684d8-a9f342523c0172ef.js
client/_next/static/css/: 60f4f1f243ecd1eb.css  a3a8d337217d70db.css  cfd4f8defa44c0b3.css
client/_next/static/ct7IRj-gFgMtMOUYewZVc/: _buildManifest.js
client/app/: 404.html  VideoControlPage.html  index.html
client/player/: asset-manifest.json  index.html
client/player/static/css/: main.26d3ee73.css  (+7 more)
docs/: crates.js  help.html  search-index.js  settings.html  source-files.js
docs/src/tvserver/: lib.rs.html
docs/tvserver/: all.html  fn.run.html  index.html  sidebar-items.js
docs/tvserver/adaptors/: fn.do_migrations.html  fn.get_database.html  index.html  sidebar-items.js  struct.AsyncCommand.html  struct.AsyncSubProcess.html  struct.HTTPClient.html  struct.RemoteBrowserPlayer.html  struct.TokioProcessSpawner.html
docs/tvserver/domain/: enum.SearchEngineType.html  enum.TaskType.html  index.html  sidebar-items.js  type.SearchDownloader.html  type.Searcher.html
docs/tvserver/entrypoints/: fn.register.html  index.html  sidebar-items.js  struct.Context.html
docs/tvserver/services/: fn.stream_video.html  index.html  sidebar-items.js  struct.MediaStore.html  struct.Monitor.html  struct.PirateClient.html  struct.RemotePlayerService.html  struct.SearchEngine.html  struct.SearchService.html  struct.TaskManager.html  struct.TransmissionDaemon.html  struct.VLCPlayer.html  struct.YoutubeClient.html  type.PirateFetcher.html  type.SearchEngineMap.html  type.YoutubeFetcher.html  type.YoutubeResult.html
migrations/: 20221226000001_initial.sql  20231008000001_collections.sql
private/http-0.2.8/: .cargo_vcs_info.json  Cargo.toml
private/transmission-rpc-0.4.0/: .cargo_vcs_info.json  Cargo.toml
src/: lib.rs  main.rs
src/adaptors/: browser_player.rs  filestore.rs  http_fetcher.rs  mod.rs  object_store.rs  pirate_bay.rs  player.rs  repository.rs  subprocess.rs  torrents.rs  vlc_player.rs  websocket.rs  websocket_connection.rs  youtube.rs
src/domain/: config.rs  constants.rs  enums.rs  events.rs  messages.rs  mod.rs  models.rs  test_util.rs  traits.rs
src/domain/algorithm/: conversion.rs  mod.rs  naming.rs
src/domain/messagebus/: channels.rs  message_exchange.rs  mod.rs
src/domain/models/: conversion.rs  downloadable.rs  mod.rs  search_results.rs  torrent.rs  video.rs  video_entry.rs  youtube.rs
src/domain/services/: channels.rs  client_manager.rs  message_exchange.rs  mod.rs  video_metadata.rs
src/entrypoints/: api.rs  context.rs  mod.rs
src/services/: api.rs  chatgpt.rs  client_apps.rs  client_serving.rs  download_monitor.rs  logging.rs  media_store.rs  media_stream.rs  message_exchange.rs  messaging_service.rs  mod.rs  monitor.rs  pirate_bay.rs  remote_player.rs  search.rs  task_manager.rs  torrents.rs  video_information.rs  video_serving.rs  vlc_player.rs  web.rs  youtube.rs
tests/: download_test.rs  media_test.rs  play_test.rs  search_test.rs  stream_test.rs
tests/common/: json_fetcher.rs  media_store.rs  mod.rs  player.rs  repository.rs  search.rs  server.rs  spawner.rs  task_manager.rs  text_fetcher.rs  torrents.rs
tests/fixtures/: completed_torrent_get.json  pb_search.html  torrents_get.json  yt_search.json
(+326 files in other folders)
