[package]
name = "tvserver"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
async-trait = "0.1.64"
axum = { version = "0.6.6", features = ["headers", "ws", "macros", "tokio"]}
bytesize = {version = "1.1.0", features = ["serde"]}
futures = "0.3"
html-escape = "0.2.13"
reqwest = { version = "0.11.14", features = ["json"] }
scraper = "0.14.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "any", "sqlite", "migrate"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.4"
tower-http = { version = "0.4.0", features = ["fs", "trace", "cors"] }
tower = { version = "0.4.10", features = ["util"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
transmission-rpc = "0.4.0"
urlencoding = "2.1.2"

[patch.crates-io]
# http = {path = "./private/http-0.2.8"}
http = {git = "https://github.com/abamaxa/http"}

[profile.release]
strip = "debuginfo"

[features]
vlc = []
