[package]
name = "tvserver"
version = "0.6.2"
edition = "2021"
authors = ["Chris Morgan <cmorgan@abamaxa.com>"]
repository = "https://github.com/abamaxa/tvserver"
license = "MIT"
readme = "README.md"
description = "Transmission JRPC client"
keywords = ["transmission", "torrent", "youtube", "ffmpeg"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
async-recursion = "1.0.4"
async-trait = "0.1.64"
axum = { version = "0.6.6", features = ["headers", "ws", "macros", "tokio"]}
bytesize = {version = "1.1.0", features = ["serde"]}
chrono = {version = "0.4.25", features=["serde"]}
futures = "0.3"
html-escape = "0.2.13"
mockall = "0.11.3"
rand = "0.8.5"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json"] }
scraper = "0.15.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "chrono", "sqlite", "migrate", "json", "offline"] }
thiserror = "1.0.40"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.4"
tower-http = { version = "0.4.0", features = ["fs", "trace", "cors"] }
tower = { version = "0.4.10", features = ["util"] }
titlecase = "2.2.1"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
transmission-rpc = "0.4.1"
urlencoding = "2.1.2"


[patch.crates-io]
http = {git = "https://github.com/abamaxa/http"}

[profile.release]
strip = "debuginfo"

[features]
vlc = []
